Version ?.?.?? - ?? ??? ????

  * Do not log GetObject requests and provide new method 
    RetsSession::SetLogEverything() to override the new default.
    Ticket #36.
   
  * Add MetadataTable::GetMinimumAsString() and GetMaximumAsString().
    Ticket #47.

Version 1.1.10 - 21 Dec 2007

  * For a SearchRequest, StandardNames now defaults to false.
  * SearchResult/RetsHttpRequest.GetQueryString() is now exposed to the
    swig supported languages.
  * Added build options of enable-PIC and enable-shared_dependencies to help
    with ezRETS on x86_64 on Linux.
  * Fix build bug where --enable-sql-compiler actually disabled it.
  * Add support for extended error messages to RetsException. Ticket #34.
  * Throw an exception from various RetsSession methods that can be called
    without being properly logged in. Ticket #37.
  * Fix bug where non US-ASCII character in MLS data caused XML parsing to
    fail. Ticket #40.
  * Added SearchResultSet::HasMaxRows() in order to determine if MAXROWS
    was sent by the server. Ticket #43.
  * RetsMetadata::GetSearchHelp() added.
  * Ruby bindings now support overloading of RetsHttpLogger and the
    use of the RetsSession.SetHttpLogger

Version 1.1.9 - 12 June 2007

  * Handle headers in Multipart GetObject responses case insensitively
  * Added option to ignore malformed headers on a multi-part GetObject
  * Fix bug where exception was thrown when URL was of the form:
    http://example.com:6103
  * Added missing METADATA-OBJECT to RetsSession::MetadataTypeToString
  * Added optional timestamp to StreamHttpLogger

Version 1.1.8 - 26 March 2007

  * librets-config has additional information of version number as hex
    and if the sql compiler was included.
  * Added support for MetadataObject to RetsMetadata
  * Added methods of GetMIMEType, GetVisibleName, and GetDescription
    to MetadataObject
  * For the languages supported by swig: map MetadataObject

Version 1.1.7 - 13 February 2007
