@@ -8,6 +8,7 @@ includedir=@abs_top_srcdir@/project/librets/include
 librets_cflags="@LIBRETS_CFLAGS@"
 librets_ldflags="@LIBRETS_LDFLAGS@"
 sql="@USE_SQL_COMPILER@"
+swig="@USE_SWIG_BINDINGS@"
 
 usage()
 {
@@ -22,6 +23,7 @@ Available values for OPTION include:
   --version   output version information
   --vernum    output the version informatin as a number (hexadecimal)
   --sql       returns true if sql compiler included
+  --swig      returns true if swig language bindings  included
 EOF
 
     exit $1
@@ -76,6 +78,10 @@ while test $# -gt 0; do
 	    show_sql="yes"
 	    ;;
 
+	--swig)
+	    show_swig="yes"
+	    ;;
+
         *)
             echo "unknown option: $1"
 	    usage 1
@@ -96,6 +102,14 @@ fi
 
 if test "$show_sql" = "yes"; then
     if [ $sql == '1' ]; then
+	append_to_output "true"
+    else
+	append_to_output "false"
+    fi
+fi
+
+if test "$show_swig" = "yes"; then
+    if [ $swig == '1' ]; then
 	append_to_output "true"
     else
 	append_to_output "false"
